--- a/johnrl.cbp
+++ b/johnrl.cbp
@@ -40,9 +40,14 @@
 		<Linker>
 			<Add library="lib\curses\pdcurses.a" />
 		</Linker>
+		<Unit filename="include/defs.hpp" />
 		<Unit filename="include/engine.hpp" />
+		<Unit filename="include/map.hpp" />
+		<Unit filename="include/tinyxml2.h" />
 		<Unit filename="src/engine.cpp" />
 		<Unit filename="src/main.cpp" />
+		<Unit filename="src/map.cpp" />
+		<Unit filename="src/tinyxml2.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
