--- a/johnrl.cbp
+++ b/johnrl.cbp
@@ -46,9 +46,11 @@
 		</Linker>
 		<Unit filename="include/defs.hpp" />
 		<Unit filename="include/engine.hpp" />
+		<Unit filename="include/gameobj.hpp" />
 		<Unit filename="include/map.hpp" />
 		<Unit filename="include/tools.hpp" />
 		<Unit filename="src/engine.cpp" />
+		<Unit filename="src/gameobj.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/map.cpp" />
 		<Unit filename="src/tools.cpp" />
