--- a/johnrl.cbp
+++ b/johnrl.cbp
@@ -49,6 +49,7 @@
 		<Unit filename="include/engine.hpp" />
 		<Unit filename="include/gameobj.hpp" />
 		<Unit filename="include/map.hpp" />
+		<Unit filename="include/monster.hpp" />
 		<Unit filename="include/player.hpp" />
 		<Unit filename="include/tools.hpp" />
 		<Unit filename="src/actor.cpp" />
@@ -56,6 +57,7 @@
 		<Unit filename="src/gameobj.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/map.cpp" />
+		<Unit filename="src/monster.cpp" />
 		<Unit filename="src/player.cpp" />
 		<Unit filename="src/tools.cpp" />
 		<Extensions>
