--- a/johnrl.cbp
+++ b/johnrl.cbp
@@ -48,6 +48,7 @@
 		<Unit filename="include/defs.hpp" />
 		<Unit filename="include/engine.hpp" />
 		<Unit filename="include/gameobj.hpp" />
+		<Unit filename="include/item.hpp" />
 		<Unit filename="include/map.hpp" />
 		<Unit filename="include/monster.hpp" />
 		<Unit filename="include/player.hpp" />
@@ -55,6 +56,7 @@
 		<Unit filename="src/actor.cpp" />
 		<Unit filename="src/engine.cpp" />
 		<Unit filename="src/gameobj.cpp" />
+		<Unit filename="src/item.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/map.cpp" />
 		<Unit filename="src/monster.cpp" />
