--- a/johnrl.cbp
+++ b/johnrl.cbp
@@ -45,6 +45,7 @@
 			<Add directory="../../SFML-2.2/lib" />
 		</Linker>
 		<Unit filename="include/actor.hpp" />
+		<Unit filename="include/container.hpp" />
 		<Unit filename="include/defs.hpp" />
 		<Unit filename="include/engine.hpp" />
 		<Unit filename="include/gameobj.hpp" />
@@ -54,6 +55,7 @@
 		<Unit filename="include/player.hpp" />
 		<Unit filename="include/tools.hpp" />
 		<Unit filename="src/actor.cpp" />
+		<Unit filename="src/container.cpp" />
 		<Unit filename="src/engine.cpp" />
 		<Unit filename="src/gameobj.cpp" />
 		<Unit filename="src/item.cpp" />
