--- a/johnrl.cbp
+++ b/johnrl.cbp
@@ -56,6 +56,7 @@
 		<Unit filename="include/message.hpp" />
 		<Unit filename="include/monster.hpp" />
 		<Unit filename="include/player.hpp" />
+		<Unit filename="include/simplexnoise.hpp" />
 		<Unit filename="include/tools.hpp" />
 		<Unit filename="src/actor.cpp" />
 		<Unit filename="src/container.cpp" />
@@ -68,6 +69,7 @@
 		<Unit filename="src/message.cpp" />
 		<Unit filename="src/monster.cpp" />
 		<Unit filename="src/player.cpp" />
+		<Unit filename="src/simplexnoise.cpp" />
 		<Unit filename="src/tools.cpp" />
 		<Extensions>
 			<code_completion />
