--- a/johnrl.cbp
+++ b/johnrl.cbp
@@ -56,7 +56,7 @@
 		<Unit filename="include/message.hpp" />
 		<Unit filename="include/monster.hpp" />
 		<Unit filename="include/player.hpp" />
-		<Unit filename="include/simplexnoise.hpp" />
+		<Unit filename="include/simplexnoise.h" />
 		<Unit filename="include/tools.hpp" />
 		<Unit filename="src/actor.cpp" />
 		<Unit filename="src/container.cpp" />
